[gd_scene load_steps=3 format=3 uid="uid://lh4nhusaonsa"]

[ext_resource type="Theme" uid="uid://uhqicibdpjko" path="res://main_theme.tres" id="1_06t4h"]
[ext_resource type="Script" uid="uid://brspukak7iy64" path="res://main_menu.gd" id="1_7vrkn"]

[node name="MenuCanvasLayer" type="CanvasLayer"]
script = ExtResource("1_7vrkn")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_06t4h")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SinglePlayerButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Single Player"

[node name="Leaderboard" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Leaderboard"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MultiplayerButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Multiplayer"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Quit"

[node name="SettingsButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Setting"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/SinglePlayerButton" to="." method="_on_single_player_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/MultiplayerButton" to="." method="_on_multiplayer_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer3/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer3/SettingsButton" to="." method="_on_settings_button_pressed"]
